--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -1,1 +1,59 @@
+---
+layout: workshop_main_3day
+permalink: /IDE_2021
+title: Infectious Disease Epidemiology Analysis
+header1: Workshop Pages for Students
+header2: Infectious Disease Epidemiology Analysis 2021
+image: /site_images/CBW_Metagenome_icon.jpg
+keywords: Infectious Disease Epidemiology Analysis
+description: Infectious Disease Epidemiology Analysis
+instructors: 
+length: 3 days
+---
 
+# Welcome <a id="welcome"></a> 
+
+The course schedule can be found [here](https://bioinformaticsdotca.github.io/IDE_2021_schedule)
+
+Meet your faculty [here]
+
+# Pre-Workshop Materials <a id="preworkshop"></a>
+
+Pre-work including programs to install can be found [here]
+
+***
+
+# Class Photo
+
+comming soon
+
+
+
+# Day 1 <a id="day1"></a>
+
+***
+
+## Welcome
+
+*<font color="#827e9c"> Rachade/Francis</font>*
+
+## Module 1
+
+*<font color="#827e9c">Instructor</font>*  
+
+[Module 1 Lecture]()
+ 
+ ### Labs
+[Lab Practical]()
+
+## Module 2
+
+*<font color="#827e9c">Instructor</font>*  
+
+[Module 2 Lecture]()
+ 
+ ### Labs
+[Lab Practical]()
+
+***
+# Day 2 <a id="day2"></a>
