--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -37,23 +37,67 @@ comming soon
 
 *<font color="#827e9c"> Rachade/Francis</font>*
 
-## Module 1
+## Module1: Introduction to Genomic Epidemiology
 
 *<font color="#827e9c">Instructor</font>*  
 
 [Module 1 Lecture]()
- 
- ### Labs
-[Lab Practical]()
 
-## Module 2
+
+## Module 2: Public Health as an Open Science and Data Sharing Challenges
 
 *<font color="#827e9c">Instructor</font>*  
 
 [Module 2 Lecture]()
  
+
+## Module 3: Molecular Typing
+
+*<font color="#827e9c">Instructor</font>*  
+
+[Module 3 Lecture]()
+
  ### Labs
 [Lab Practical]()
 
 ***
 # Day 2 <a id="day2"></a>
+
+## Module 4: Phylogenetics, Phylodynamics, and MGE
+
+*<font color="#827e9c">Instructor</font>*  
+
+[Module 4 Lecture]()
+ 
+ ### Labs
+[Lab Practical]()
+
+## Module 5: Antimicrobial Resistant Gene Analysis
+
+*<font color="#827e9c">Instructor</font>*  
+
+[Module 5 Lecture]()
+ 
+ ### Labs
+[Lab Practical]()
+
+***
+# Day 3 <a id="day3"></a>
+
+## Module 6: Emerging Pathogen Detection and Identification
+
+*<font color="#827e9c">Instructor</font>*  
+
+[Module 6 Lecture]()
+ 
+ ### Labs
+[Lab Practical]()
+
+## Module 7: Keynote: Canada's National SARS-CoV-2 Genomics Program
+
+*<font color="#827e9c">Instructor</font>*  
+
+[Module 5 Lecture]()
+ 
+## Module 8: Integrated Assignment
+[Integrated Assignment]()
