insert lab links

--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -58,7 +58,7 @@ comming soon
 [Module 3 Lecture]()
 
  ### Labs
-[Lab Practical]()
+[Lab Practical](https://github.com/bioinformatics-ca/IDE_2021/blob/main/module3/molecular-typing-lab.md)
 
 ***
 # Day 2 <a id="day2"></a>
@@ -70,7 +70,7 @@ comming soon
 [Module 4 Lecture]()
  
  ### Labs
-[Lab Practical]()
+[Lab Practical](https://github.com/bioinformatics-ca/IDE_2021/blob/main/module4/README.md)
 
 ## Module 5: Antimicrobial Resistant Gene Analysis
 
@@ -91,7 +91,7 @@ comming soon
 [Module 6 Lecture]()
  
  ### Labs
-[Lab Practical]()
+[Lab Practical](https://github.com/bioinformatics-ca/IDE_2021/blob/main/module6/README.md)
 
 ## Module 7: Keynote: Canada's National SARS-CoV-2 Genomics Program
 
@@ -100,4 +100,5 @@ comming soon
 [Module 5 Lecture]()
  
 ## Module 8: Integrated Assignment
-[Integrated Assignment]()
+[Integrated Assignment](https://github.com/bioinformatics-ca/IDE_2021/blob/main/integrated_assignment/int_assignment.md)
+[Answer key](https://github.com/bioinformatics-ca/IDE_2021/blob/main/integrated_assignment/int_assignment_key.md)
