--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -23,6 +23,11 @@ Pre-work including programs to install can be found [here]
 
 ***
 
+# AWS Module <a id="preworkshop"></a>
+
+Connecting and properly using a cloud computing cluster at the CBW [here](https://bioinformaticsdotca.github.io/AWS_v2_2021)
+***
+
 # Class Photo
 
 comming soon
