--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -19,7 +19,7 @@ Meet your faculty [here]
 
 # Pre-Workshop Materials <a id="preworkshop"></a>
 
-Pre-work including programs to install can be found [here]
+Pre-work including programs to install can be found [here](https://forms.gle/2bS42KbAhud7gBY16)
 
 ***
 
@@ -44,21 +44,21 @@ comming soon
 
 ## Module1: Introduction to Genomic Epidemiology
 
-*<font color="#827e9c">Instructor</font>*  
+*<font color="#827e9c">William Hsiao</font>*  
 
 [Module 1 Lecture]()
 
 
 ## Module 2: Public Health as an Open Science and Data Sharing Challenges
 
-*<font color="#827e9c">Instructor</font>*  
+*<font color="#827e9c">William Hsiao</font>*  
 
 [Module 2 Lecture]()
  
 
 ## Module 3: Molecular Typing
 
-*<font color="#827e9c">Instructor</font>*  
+*<font color="#827e9c">Ed Taboada & Dillon Barker </font>*  
 
 [Module 3 Lecture]()
 
@@ -70,7 +70,7 @@ comming soon
 
 ## Module 4: Phylogenetics, Phylodynamics, and MGE
 
-*<font color="#827e9c">Instructor</font>*  
+*<font color="#827e9c">Rob Beikor</font>*  
 
 [Module 4 Lecture]()
  
@@ -79,7 +79,7 @@ comming soon
 
 ## Module 5: Antimicrobial Resistant Gene Analysis
 
-*<font color="#827e9c">Instructor</font>*  
+*<font color="#827e9c">Finlay Maguire</font>*  
 
 [Module 5 Lecture]()
  
@@ -91,7 +91,7 @@ comming soon
 
 ## Module 6: Emerging Pathogen Detection and Identification
 
-*<font color="#827e9c">Instructor</font>*  
+*<font color="#827e9c">Gary Van Domselaar</font>*  
 
 [Module 6 Lecture]()
  
@@ -100,11 +100,14 @@ comming soon
 
 ## Module 7: Keynote: Canada's National SARS-CoV-2 Genomics Program
 
-*<font color="#827e9c">Instructor</font>*  
+*<font color="#827e9c">Gary Van Domselaar</font>*  
 
 [Module 5 Lecture]()
  
 ## Module 8: Integrated Assignment
+
+*<font color="#827e9c">Venus Lau & Jimmy Liu</font>*  
+
 [Integrated Assignment](https://github.com/bioinformatics-ca/IDE_2021/blob/main/integrated_assignment/int_assignment.md)
 
 [Answer key](https://github.com/bioinformatics-ca/IDE_2021/blob/main/integrated_assignment/int_assignment_key.md)
