--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -63,7 +63,7 @@ comming soon
 [Module 3 Lecture]()
 
  ### Labs
-[Lab Practical](https://github.com/bioinformatics-ca/IDE_2021/blob/main/module3/molecular-typing-lab.md)
+[Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module3_lab)
 
 ***
 # Day 2 <a id="day2"></a>
@@ -75,7 +75,7 @@ comming soon
 [Module 4 Lecture]()
  
  ### Labs
-[Lab Practical](https://github.com/bioinformatics-ca/IDE_2021/blob/main/module4/README.md)
+[Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module4_lab)
 
 ## Module 5: Antimicrobial Resistant Gene Analysis
 
@@ -96,7 +96,7 @@ comming soon
 [Module 6 Lecture]()
  
  ### Labs
-[Lab Practical](https://github.com/bioinformatics-ca/IDE_2021/blob/main/module6/README.md)
+[Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module6_lab)
 
 ## Module 7: Keynote: Canada's National SARS-CoV-2 Genomics Program
 
@@ -108,6 +108,6 @@ comming soon
 
 *<font color="#827e9c">Venus Lau & Jimmy Liu</font>*  
 
-[Integrated Assignment](https://github.com/bioinformatics-ca/IDE_2021/blob/main/integrated_assignment/int_assignment.md)
+[Integrated Assignment](https://bioinformaticsdotca.github.io/IDE_2021_int_assignment.md)
 
-[Answer key](https://github.com/bioinformatics-ca/IDE_2021/blob/main/integrated_assignment/int_assignment_key.md)
+[Answer key]()
