--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -108,6 +108,6 @@ comming soon
 
 *<font color="#827e9c">Venus Lau & Jimmy Liu</font>*  
 
-[Integrated Assignment](https://bioinformaticsdotca.github.io/IDE_2021_int_assignment.md)
+[Integrated Assignment](https://bioinformaticsdotca.github.io/IDE_2021_int_assignment)
 
 [Answer key]()
