--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -60,7 +60,7 @@ comming soon
 
 *<font color="#827e9c">Ed Taboada & Dillon Barker </font>*  
 
-[Module 3 Lecture]()
+[Module 3 Lecture](https://drive.google.com/file/d/1p-U4_mngwjXBcVBgo12iaTUwp0bWZnQ6/view?usp=sharing)
 
  ### Labs
 [Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module3_lab)
