--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -13,9 +13,9 @@ length: 3 days
 
 # Welcome <a id="welcome"></a> 
 
-The course schedule can be found [here](https://bioinformaticsdotca.github.io/IDE_2021_schedule)
+The course **schedule** can be found [here](https://bioinformaticsdotca.github.io/IDE_2021_schedule)
 
-Meet your faculty [here]
+Meet your **faculty** [here]
 
 # Pre-Workshop Materials <a id="preworkshop"></a>
 
@@ -62,7 +62,8 @@ comming soon
 
 [Module 3 Lecture](https://drive.google.com/file/d/1p-U4_mngwjXBcVBgo12iaTUwp0bWZnQ6/view?usp=sharing)
 
- ### Labs
+### Labs
+ 
 [Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module3_lab)
 
 ***
