--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -86,7 +86,7 @@ comming soon
 
 [Module 5 Lecture]()
  
- ### Labs
+### Labs
  
 [Lab Practical]()
 
@@ -97,7 +97,7 @@ comming soon
 
 *<font color="#827e9c">Gary Van Domselaar</font>*  
 
-[Module 6 Lecture]()
+[Module 6 Lecture](https://drive.google.com/file/d/1tmEVi_AlF6mNKuJuwI837BR2GJCDkOPR/view?usp=sharing)
 
 ### Labs
 
