--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -15,7 +15,7 @@ length: 3 days
 
 The course **schedule** can be found [here](https://bioinformaticsdotca.github.io/IDE_2021_schedule)
 
-Meet your **faculty** [here]
+Meet your **faculty** [here](https://drive.google.com/file/d/1tmEVi_AlF6mNKuJuwI837BR2GJCDkOPR/view?usp=sharing)
 
 # Pre-Workshop Materials <a id="preworkshop"></a>
 
@@ -97,7 +97,7 @@ comming soon
 
 *<font color="#827e9c">Gary Van Domselaar</font>*  
 
-[Module 6 Lecture](https://drive.google.com/file/d/1tmEVi_AlF6mNKuJuwI837BR2GJCDkOPR/view?usp=sharing)
+[Module 6 Lecture]()
 
 ### Labs
 
