--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -50,8 +50,7 @@ comming soon
 [Module 1 Lecture](https://drive.google.com/file/d/1Ce-9AeZ9BcUJvUGR4WPyVEFlKMMWRaZN/view?usp=sharing)
 
 
-## Module 2: Public Health as an Open Science and Data Sharing Challenges
-
+## Module 2: Phylogenetic Analysis
 *<font color="#827e9c">William Hsiao</font>*  
 
 [Module 2 Lecture](https://drive.google.com/file/d/1bnl8-_3k4fD4veDO9jsmav2NgKTikDDc/view?usp=sharing)
