--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -71,7 +71,7 @@ comming soon
 
 ## Module 4: Phylogenetics, Phylodynamics, and MGE
 
-*<font color="#827e9c">Rob Beikor</font>*  
+*<font color="#827e9c">Rob Beiko</font>*  
 
 [Module 4 Lecture]()
  
