--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -77,13 +77,15 @@ comming soon
  
 ### Labs
 
+[Module 4 Lab](https://drive.google.com/file/d/1-OC9TOOlN4DLoWOX0NitipOhFuWsVB9f/view?usp=sharing)
+
 [Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module4_lab)
 
 ## Module 5: Antimicrobial Resistant Gene Analysis
 
 *<font color="#827e9c">Finlay Maguire</font>*  
 
-[Module 5 Lecture]()
+[Module 5 Lecture](https://drive.google.com/file/d/1yxZZGb4gQQpyaK1D64-Og2ntmd2UONDr/view?usp=sharing)
  
 ### Labs
  
