--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -89,7 +89,7 @@ comming soon
  
 ### Labs
  
-[Lab Practical]()
+[Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module5_lab)
 
 ***
 # Day 3 <a id="day3"></a>
