--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -98,9 +98,10 @@ comming soon
 
 *<font color="#827e9c">Gary Van Domselaar</font>*  
 
-[Module 6 Lecture]()
+[Module 6 Lecture](https://drive.google.com/file/d/1-_P4itLTXumMy1E-cQdJpRj17Zy02OGV/view?usp=sharing)
 
 ### Labs
+[Module 6 lab](https://drive.google.com/file/d/1PdQbTW2Ax3KV0JisAxYaWsEajSCMfIO8/view?usp=sharing)
 
 [Lab Practical](https://bioinformaticsdotca.github.io/IDE_2021_Module6_lab)
 
