--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -109,7 +109,7 @@ comming soon
 
 *<font color="#827e9c">Gary Van Domselaar</font>*  
 
-[Module 7 Lecture]()
+[Module 7 Keynote](https://drive.google.com/file/d/109lYwuF1YeXXY59VSisHI6rDzyqWDaYn/view?usp=sharing)
  
 ## Module 8: Integrated Assignment
 
