--- a/IDE_2021.md
+++ b/IDE_2021.md
@@ -117,4 +117,4 @@ comming soon
 
 [Integrated Assignment](https://bioinformaticsdotca.github.io/IDE_2021_int_assignment)
 
-[Answer key]()
+[Answer key](https://bioinformaticsdotca.github.io/IDE_2021_integrated_assignment)
